--- a/book-flea/WebContent/css/component/nav.css
+++ b/book-flea/WebContent/css/component/nav.css
@@ -1,3 +1,7 @@
+.logo-wrap{
+    cursor: pointer;
+}
+
 
 .nav__div{
     height: 64px;
@@ -84,17 +88,44 @@
     backdrop-filter: saturate(200%) blur(10px);
     background-color: rgba(255, 255, 255, 0.8);
 }
+
 .sep-menu > ul > li{
     width: 100%;
     height: 50px;
     /* border-bottom: var(--border); */
-    padding:0 20px;
-
+    padding:0px 30px;
+    
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
-
+.sep-menu > ul > li:not(:first-child):hover{
+    background-color: rgba(0,0,0,0.05);
+}
+.sep-menu__mypage{
+    width: 100%;
+}
+.sep-menu__mypage__wrap{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.sep-menu__mypage__wrap__signout{
+    cursor: pointer;
+}
+.sep-menu__mypage__wrap__signout > i{
+    color:rgb(50, 50, 50);
+    font-size: 18px;
+}
+.sep-menu__mypage__wrap__info span{
+    color:rgb(50, 50, 50);
+    font-weight: 550;
+}
+.sep-menu__mypage__wrap__info i{
+    font-size: 26px;
+    margin-right: 8px;
+}
 .sep-menu__hr{
     height: 1px;
     width: 100%;
@@ -103,17 +134,124 @@
 
 .sep-menu__col{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 90%;
     height:30px;
     border-radius: 5px;
     cursor: pointer;
 }
+.sep-menu__col:hover{
+    
+}
 
 .nav-small__col-left__i-wrap > i:nth-child(2){
     display: none;
 }
+
+.nav-2{
+    display: none;
+}
+/*====================================*/
+.nav-big{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-big__col{
+    display: flex
+}
+/*====================================*/
+.nav-big__col-left{
+    justify-content: flex-start;
+    width: 25%;
+}
+.nav-big__col-mid{
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-big__col-right{
+    justify-content: flex-end;
+    width: 25%;
+}
+.nav-big__col-mid__logo-wrap{
+    width: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+/*====================================*/
+.nav-big__col-left__i-wrap,
+.nav-big__col-right__i-wrap{
+    height: 64px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.nav-big__col-left__i-wrap > i {
+    font-size: 22px;
+    color:rgb(50, 50, 50);
+}
+.nav-big__col-left__i-wrap:hover > i{
+    color:rgb(100,100,100);
+}
+.nav-big__col-mid__logo-wrap >   h1{
+    font-size: 30px;
+    color:rgb(50, 50, 50);
+}
+.nav-big__col-right__i-wrap > i {
+    font-size: 22px;
+    color:rgb(50, 50, 50);
+}
+.nav-big__col-right__i-wrap:hover > i{
+    color:rgb(100,100,100);
+}
+/*========================================*/
+.nav-2__menu{
+    height: 52px;
+    width: 100%;
+    border-bottom: var(--border) ;
+    padding: 0 0px;
+    position: fixed;
+    top: 64px;
+    left: 0;
+    backdrop-filter: saturate(200%) blur(10px);
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-2__menu > ul{
+    height: 52px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 769px;
+}
+.nav-2__menu > ul > li{
+    text-align: center;
+    cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+.nav-2__menu > ul > li:hover{
+    background-color: rgba(0,0,0,0.05);
+    
+}
+
+.margin-top-maker-2{
+    display: none;
+}
+/*========================================*/
+/*========================================*/
 @media (max-width:425px){ /*일반스마트폰*/
 
 }
@@ -121,17 +259,23 @@
 @media (min-width:426px) and (max-width:768px){/* 소형 태블릿 */
 
 }
-@media (min-width:769px) and (max-width:1024px){ /* 태블릿 */
-
-}
-@media (min-width:1025px) and (max-width:1439px){ /* PC */
-
-}
-@media (min-width:1440px){
-    .nav-small__col-left{
+@media (min-width:769px){ /* 태블릿 */
+    .nav-big__col-left{
         justify-content: flex-end;
     }
-    .nav-small__col-right{
+    .nav-big__col-right{
         justify-content: flex-start;
+    }
+    .nav-1{
+        display: none;
+    }
+    .sep-menu{
+        display: none;
+    }
+    .nav-2{
+        display: block;
+    }
+    .margin-top-maker-2{
+        display: block;
     }
 }
