--- a/book-flea/WebContent/css/styles.css
+++ b/book-flea/WebContent/css/styles.css
@@ -4,6 +4,7 @@
 @import "variables.css";
 
 @import "./component/nav.css";
+@import "./component/footer.css";
 
 body{
     font-family: "Open Sans", sans-serif;
