Add user-management page

--- a/book-flea/WebContent/admin/css/page/sign.css
+++ b/book-flea/WebContent/admin/css/page/sign.css
@@ -16,7 +16,6 @@
 .sign-box__title{
 	font-size: 24px;
 	font-weight:600;
-	color: rgba(17, 24, 39,1);
 	margin: 30px 0px;
 }
 .sign-box{
@@ -30,7 +29,7 @@
 	flex-direction:column;
 	justify-content:space-evenly;
 	align-items : center;
-	background-color:white;
+	background-color:#292A2D;
 }
 .sign-box__form{
 	width:300px;
@@ -44,9 +43,11 @@
 	width:300px;
 	padding:10px;
 	height:38px;
-	border: 1px solid #D1D5DB;
+	border: var(--border);
 	border-radius:6px;
 	margin: 10px 0px; /*!!!!!!!!!!!!!!!!!*/
+	background-color:rgba(0,0,0,0);
+	color: white;
 }
 .sign-text:focus{
 	border: 1px solid #7fc241;
