Add order-management page

--- a/book-flea/WebContent/admin/css/page/manage-user.css
+++ b/book-flea/WebContent/admin/css/page/manage-user.css
@@ -1,56 +1,56 @@
-.book-list > .book-list__li:not(:last-child){
+.user-list > .user-list__li:not(:last-child){
 	/*margin: 10px 10px;*/
 }
 
-.book-list__li{
+.user-list__li{
 	padding:10px 20px;
 	display:flex;
 	justify-content: space-between;
 	
 }
 
-.book-list__li-title{
+.user-list__li-title{
 	font-weight:600;
 	font-size:20px;
 }
-.book-list__li-title > div{
+.user-list__li-title > div{
 	text-align:left;
 }
-.book-list > .book-list__li:not(.book-list__li-title){
+.user-list > .user-list__li:not(.user-list__li-title){
 	cursor:pointer;
 }
 
-.book-list__li > div{
+.user-list__li > div{
 	display:block;
 }
-.book-list__li > div:nth-child(1){/*title*/
+.user-list__li > div:nth-child(1){/*title*/
+	width: 15%;
+}
+.user-list__li > div:nth-child(2){ /*author*/
+	width: 15%;
+}
+.user-list__li > div:nth-child(3){/*publisher*/
 	width: 40%;
 }
-.book-list__li > div:nth-child(2){ /*author*/
-	width: 15%;
-}
-.book-list__li > div:nth-child(3){/*publisher*/
-	width: 15%;
-}
-.book-list__li > div:nth-child(4){/*price*/
-	width: 15%;
+.user-list__li > div:nth-child(4){/*price*/
+	width: 10%;
 }
 
-.book-edit-form{
+.user-edit-form{
 	display:flex;
 	flex-direction:column;
 }
 
-.book-edit-form > ul > li{
+.user-edit-form > ul > li{
 	padding:10px 20px;
 	display:flex;
 	flex-direction:column;
 }
-.book-edit-form > ul > li > label{
+.user-edit-form > ul > li > label{
 	margin-left:5px;
 	margin-bottom:5px;
 }
-.book-edit-form > ul > li > input{
+.user-edit-form > ul > li > input{
 	height:38px;
 	border: var(--border);
 	border-radius:6px;
@@ -59,39 +59,39 @@
 	padding: 0 10px;
 }
 
-.book-edit-form__btns{
+.user-edit-form__btns{
 	display:grid;
 	grid-template-columns:1fr 1fr;
 	padding:10px 20px;
 }
 
-.book-edit-form__btns button{
+.user-edit-form__btns button{
 	height:38px;
 }
-.book-edit-form__btns .btn-green{
+.user-edit-form__btns .btn-green{
 	width:50%;
 }
-.book-edit-form__btns .btn-white{
+.user-edit-form__btns .btn-white{
 	width:50%;
 }
 
-.book-edit-form__btns__left{
+.user-edit-form__btns__left{
 	display:flex;
 	justify-content: flex-start;
 }
-.book-edit-form__btns__right{
+.user-edit-form__btns__right{
 	display:flex;
 	justify-content: flex-end;
 }
 
-.book-box__bottom{
+.user-box__bottom{
 	width:100%;
 	display:flex;
 	justify-content:center;
 	align-items: center;
 	margin:30px;
 }
-.book-box__bottom > button{
+.user-box__bottom > button{
 	width:20%;	
 	height:38px;
 }	
