--- a/book-flea/WebContent/admin/css/component/main.css
+++ b/book-flea/WebContent/admin/css/component/main.css
@@ -1,7 +1,7 @@
 main{
 	padding:20px;
-	height:1px;
 	min-height: calc(100vh - 165px);
+	height:auto;
 }
 
 @media (max-width:425px){ 
@@ -19,6 +19,7 @@ main{
 @media (min-width:1024px){
 	main{
 		max-width: 1024px;
+		height:auto;
 		min-height: calc(100vh - 217px);
 		margin: 0px calc( calc(100vw - 1024px) / 2 );
 	}
