--- a/book-flea/WebContent/cust/css/styles.css
+++ b/book-flea/WebContent/cust/css/styles.css
@@ -10,6 +10,7 @@
 @import "./page/sign.css";
 @import "./page/my.css";
 @import "./page/all.css";
+@import "./page/book-all.css";
 
 body{
     font-family: "Open Sans", sans-serif;
